package com.example.myplanning.model.Llista;

public class DayRating extends Diari{
    public DayRating() {
        super();
    }
}
