package com.example.myplanning.model.Llista;

import java.time.LocalDateTime;

public class HomeWork extends Dades{
    public HomeWork(String activitat, Boolean done, LocalDateTime date) {
        super(activitat, done, date);
    }
}
