package com.example.myplanning.model.Llista;

import java.util.List;

public class Notes extends Diari {
    public Notes() {
        super();
    }
}
