package com.example.myplanning.model.Llista;

import java.time.LocalDateTime;

public class Schedule extends Dades{

    public Schedule(String activitat, Boolean done, LocalDateTime date) {
        super(activitat, done, date);
    }
}
