package com.example.myplanning.model.Llista;

import java.time.LocalDateTime;

public class ToDo extends Dades{

    public ToDo(String activitat, Boolean done, LocalDateTime date) {
        super(activitat, done, date);
    }
}
