@startuml

title __LLISTA's Class Diagram__\n

  namespace com.example.myplanning {
    namespace model.Llista {
      class com.example.myplanning.model.Llista.ComprobarDades {
          + isSecure()
          - isMail()
          - isPasswordSegur()
      }
    }
  }
  

  namespace com.example.myplanning {
    namespace model.Llista {
      class com.example.myplanning.model.Llista.Dades {
          - activitat : String
          - date : LocalDateTime
          - done : Boolean
          + Dades()
          + getActivitat()
          + getDone()
          + setActivitat()
          + setDone()
          + toMap()
          + toString()
      }
    }
  }
  

  namespace com.example.myplanning {
    namespace model.Llista {
      class com.example.myplanning.model.Llista.DayRating {
          + DayRating()
      }
    }
  }
  

  namespace com.example.myplanning {
    namespace model.Llista {
      abstract class com.example.myplanning.model.Llista.Diari {
          - llista : List<String>
          + Diari()
          + add()
          + getLlista()
          + setLlista()
      }
    }
  }
  

  namespace com.example.myplanning {
    namespace model.Llista {
      enum ErrorLogIn {
        CAMP_INCORRECTE
        CONTRASSENYA_INCORRECTA
        LOGIN_CORRECTE
        USUARI_INEXISTENT
        text
      }
    }
  }
  

  namespace com.example.myplanning {
    namespace model.Llista {
      enum ErrorRegistre {
        FORMAT_CONTRASENYA
        FORMAT_EMAIL
        REGISTRE_ANTERIOR
        REGISTRE_CORRECTE
        text
      }
    }
  }
  

  namespace com.example.myplanning {
    namespace model.Llista {
      class com.example.myplanning.model.Llista.HomeWork {
          + HomeWork()
      }
    }
  }
  

  namespace com.example.myplanning {
    namespace model.Llista {
      class com.example.myplanning.model.Llista.Notes {
          + Notes()
      }
    }
  }
  

  namespace com.example.myplanning {
    namespace model.Llista {
      class com.example.myplanning.model.Llista.Schedule {
          + Schedule()
      }
    }
  }
  

  namespace com.example.myplanning {
    namespace model.Llista {
      class com.example.myplanning.model.Llista.ToDo {
          + ToDo()
      }
    }
  }
  

  namespace com.example.myplanning {
    namespace model.Llista {
      class com.example.myplanning.model.Llista.Usuario {
          {static} + instance : Usuario
          - nom : String
          + Usuario()
          {static} + getInstance()
          {static} + getInstance()
          + getNom()
          + setNom()
      }
    }
  }
  

  com.example.myplanning.model.Llista.DayRating -up-|> com.example.myplanning.model.Llista.Diari
  com.example.myplanning.model.Llista.HomeWork -up-|> com.example.myplanning.model.Llista.Dades
  com.example.myplanning.model.Llista.Notes -up-|> com.example.myplanning.model.Llista.Diari
  com.example.myplanning.model.Llista.Schedule -up-|> com.example.myplanning.model.Llista.Dades
  com.example.myplanning.model.Llista.ToDo -up-|> com.example.myplanning.model.Llista.Dades


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
